# QSlim

./: .gitignore  CMakeLists.txt  README.md  README.txt
docs/: UserGuide.md
examples/: CMakeLists.txt  Makefile  propvis.cxx  smfview.cxx
mixkit/: COPYING.txt  MixKit.dsp  README.txt
mixkit/src/: CMakeLists.txt  Makefile  MxArcball.cxx  MxArcball.h  MxAsp.cxx  MxAsp.h  MxBlock.h  MxBlock2.h  MxBlock3.h  MxBlockModel.cxx  MxBlockModel.h  MxCmdParser.h  MxDynBlock.h  MxGL.h  MxGLPane.cxx  MxGLPane.h  MxGLUtils.cxx  MxGLUtils.h  MxGeoPrims.h  MxGeom3D.cxx  MxGeom3D.h  MxHeap.cxx  MxHeap.h  MxLineModel.cxx  MxLineModel.h  MxManipulator.h  MxMat2.cxx  MxMat2.h  MxMat3-jacobi.cxx  MxMat3.cxx  MxMat3.h  MxMat4.cxx  MxMat4.h  MxMath.h  MxOBJ.cxx  MxOBJ.h  MxOFF.cxx  MxOFF.h  MxPropSlim.cxx  MxQMetric2.cxx  (+30 more)
tests/: CMakeLists.txt  test_data.cxx  test_math.cxx  test_output_formats.py  test_primitives.py  test_protected_vertices.cxx  test_qslim_cli.py  test_removal_order.cxx
tools/filters/: CMakeLists.txt  Makefile  cmdline.cxx  cmdline.h  smf2c.cxx  smfboundary.cxx  smfedgelist.cxx  smferror.cxx  smfquadric.cxx  smfrefine.cxx  smfsphere.cxx  smfstitch.cxx
tools/qslim/: CMakeLists.txt  Makefile  QSlim.txt  cmdline.cxx  main.cxx  output.cxx  qslim.cxx  qslim.h  qvis.cxx
win32/: SlimKit.dsw
win32/QSlim/: QSlim.dsp
win32/QVis/: QVis.dsp
win32/SMFView/: SMFView.dsp
win32/smfclean/: smfclean.dsp
win32/smfmeasure/: smfmeasure.dsp
